# auth-base

./: docker-compose.yml
backend/: Dockerfile  README.md  config.py  delete_database.py  env.example  main.py  pyproject.toml
backend/core/: active_directory.py  dependencies.py  http_schemas.py  password_hash.py  schema.py
backend/db/: database.py  models.py  setup_database.py
backend/routers/: account_router.py  audit_log_detail_router.py  audit_log_router.py  auth.py  branch_router.py  branch_unit_router.py  login_log_router.py  page_router.py  role_router.py  unit_profile_router.py  unit_router.py  voucher_status_router.py
my-app/: .dockerignore  Dockerfile  README.md  auth.ts  example.middleware.ts  package-lock.json  package.json
my-app/actions/: auth-actions.ts  page-actions.ts  role-actions.ts
my-app/app/: layout.tsx
my-app/app/(pages)/: layout.tsx
my-app/app/(pages)/dashboard/: page.tsx
my-app/app/(pages)/profile/: page.tsx
my-app/app/login/: page.tsx
my-app/components/: app-navigation.tsx  language-switcher.tsx  sign-out-button.tsx  user-avatar.tsx
my-app/components/table/: date-range-picker.tsx  table-body.tsx  table-pagination.tsx  table-search.tsx
my-app/components/ui/: spinner.tsx
my-app/data/: pages.ts
my-app/hooks/: language-context.tsx  useCurrentUser.ts
my-app/lib/: auth.actions.ts  axiosInstance.ts  zod.ts
my-app/lib/actions/: branch.actions.ts  user.actions.ts
my-app/locales/: ar.json  en.json
my-app/pages/api/: profile.ts  proxy-login.ts
my-app/types/: api.d.ts  auth.ts  index.d.ts  next-auth.d.ts  user.d.ts
(+14 files in other folders)
